--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -73,6 +73,378 @@
       "benefit3": "24시간 응답"
     }
   },
+  "team": {
+    "hero": {
+      "badge": "팀",
+      "title": "세계 수준의",
+      "titleHighlight": "전문가를 만나보세요",
+      "subtitle": "기술, 관리 및 혁신 분야에서 10년 이상의 경험을 가진 50명 이상의 시니어 전문가"
+    },
+    "leadership": {
+      "title": "리더십 팀",
+      "subtitle": "전략과 성장을 주도하는 비전가",
+      "ceo": {
+        "name": "David Chen",
+        "role": "CEO & 창립자",
+        "bio": "확장 가능한 기술 솔루션 구축 15년 이상. 전 Amazon VP, Stanford CS."
+      },
+      "cto": {
+        "name": "Sarah Park",
+        "role": "최고 기술 책임자",
+        "bio": "클라우드 아키텍처 전문가. 전 Google 시니어 엔지니어, MIT 졸업."
+      },
+      "coo": {
+        "name": "Michael Torres",
+        "role": "최고 운영 책임자",
+        "bio": "운영 우수성 전문가. 이전 Series B 스타트업 COO."
+      },
+      "cdo": {
+        "name": "Emily Watson",
+        "role": "최고 디자인 책임자",
+        "bio": "수상 경력의 UX 디자이너. Airbnb 디자인 리드, RISD MFA."
+      }
+    },
+    "management": {
+      "title": "프로젝트 관리",
+      "subtitle": "탁월한 전달을 보장하는 전문 코디네이터",
+      "pm1": {
+        "name": "James Kim",
+        "role": "시니어 프로젝트 매니저",
+        "bio": "Agile/Scrum 인증. 100개 이상의 프로젝트를 정시 및 예산 내에서 전달."
+      },
+      "pm2": {
+        "name": "Linda Zhang",
+        "role": "기술 프로그램 매니저",
+        "bio": "교차 기능 팀 리더. PMP 및 SAFe 인증 전문가."
+      },
+      "pm3": {
+        "name": "Carlos Rivera",
+        "role": "전달 매니저",
+        "bio": "고객 관계 전문가. 8년 이상의 엔터프라이즈 계정 관리."
+      }
+    },
+    "technical": {
+      "title": "엔지니어링 팀",
+      "subtitle": "최첨단 솔루션을 구축하는 숙련된 엔지니어",
+      "lead1": {
+        "name": "Alex Thompson",
+        "role": "리드 풀스택 엔지니어",
+        "bio": "React, Node.js, AWS 전문가. 천만 명 이상의 사용자를 위한 플랫폼 구축."
+      },
+      "lead2": {
+        "name": "Priya Sharma",
+        "role": "리드 모바일 엔지니어",
+        "bio": "iOS/Android 전문가. 500만 다운로드 이상의 앱 출시."
+      },
+      "lead3": {
+        "name": "Kevin O'Brien",
+        "role": "리드 DevOps 엔지니어",
+        "bio": "Kubernetes 및 CI/CD 전문가. 배포 시간 80% 단축."
+      },
+      "lead4": {
+        "name": "Maya Patel",
+        "role": "리드 AI 엔지니어",
+        "bio": "ML/NLP 전문가. 컴퓨터 과학 박사, 발표된 연구자."
+      }
+    },
+    "qa": {
+      "title": "품질 보증",
+      "subtitle": "제품 우수성을 보장하는 전담 QA",
+      "qa1": {
+        "name": "Tom Anderson",
+        "role": "QA 리드",
+        "bio": "테스트 자동화 전문가. 10년 이상의 경험을 가진 ISTQB 인증."
+      },
+      "qa2": {
+        "name": "Sofia Martinez",
+        "role": "시니어 QA 엔지니어",
+        "bio": "성능 테스트 전문가. Selenium 및 Cypress 전문가."
+      }
+    },
+    "cta": {
+      "title": "팀에 합류하여",
+      "titleHighlight": "미래를 만드세요",
+      "subtitle": "우리는 기술과 혁신에 열정적인 재능 있는 사람들을 항상 찾고 있습니다.",
+      "ctaPrimary": "채용 공고 보기",
+      "ctaSecondary": "문화 알아보기"
+    }
+  },
+  "industries": {
+    "hero": {
+      "badge": "서비스 산업",
+      "title": "모든 부문의",
+      "titleHighlight": "비즈니스 역량 강화",
+      "subtitle": "복잡한 비즈니스 과제를 해결하기 위한 심화된 산업 전문 지식과 최첨단 기술의 결합"
+    },
+    "sectors": {
+      "title": "산업 집중",
+      "subtitle": "다양한 시장을 위한 전문 솔루션"
+    },
+    "ecommerce": {
+      "title": "전자상거래 및 소매",
+      "description": "전환과 고객 충성도를 높이는 차세대 쇼핑 경험",
+      "features": [
+        "옴니채널 통합",
+        "개인화된 추천",
+        "실시간 재고 관리",
+        "고급 분석 및 보고",
+        "결제 게이트웨이 통합",
+        "모바일 우선 디자인"
+      ],
+      "stats": {
+        "projects": "40+",
+        "label1": "전자상거래 프로젝트",
+        "growth": "250%",
+        "label2": "평균 매출 성장"
+      }
+    },
+    "fintech": {
+      "title": "핀테크 및 뱅킹",
+      "description": "디지털 경제를 위한 안전하고 규정 준수 금융 기술 솔루션",
+      "features": [
+        "디지털 뱅킹 플랫폼",
+        "결제 처리 시스템",
+        "블록체인 및 암호화폐",
+        "사기 탐지 및 방지",
+        "규제 준수",
+        "오픈 뱅킹 API"
+      ],
+      "stats": {
+        "projects": "25+",
+        "label1": "핀테크 솔루션",
+        "transactions": "$500M+",
+        "label2": "처리된 거래"
+      }
+    },
+    "healthcare": {
+      "title": "헬스케어 및 메드테크",
+      "description": "환자 치료와 운영 효율성을 개선하는 디지털 건강 솔루션",
+      "features": [
+        "원격 의료 플랫폼",
+        "전자 건강 기록",
+        "의료 기기 통합",
+        "HIPAA 준수",
+        "환자 관리 시스템",
+        "건강 분석"
+      ],
+      "stats": {
+        "projects": "15+",
+        "label1": "의료 시스템",
+        "patients": "1M+",
+        "label2": "서비스 환자"
+      }
+    },
+    "media": {
+      "title": "미디어 및 엔터테인먼트",
+      "description": "현대 관객을 위한 매력적인 스트리밍 및 콘텐츠 플랫폼",
+      "features": [
+        "라이브 스트리밍 인프라",
+        "주문형 비디오 플랫폼",
+        "콘텐츠 관리 시스템",
+        "CDN 최적화",
+        "다중 기기 지원",
+        "수익화 전략"
+      ],
+      "stats": {
+        "projects": "20+",
+        "label1": "미디어 플랫폼",
+        "viewers": "5M+",
+        "label2": "동시 시청자"
+      }
+    },
+    "education": {
+      "title": "교육 및 이러닝",
+      "description": "교육 전달을 변화시키는 인터랙티브 학습 플랫폼",
+      "features": [
+        "학습 관리 시스템",
+        "가상 교실",
+        "인터랙티브 콘텐츠 도구",
+        "진행 상황 추적",
+        "모바일 학습 앱",
+        "인증 시스템"
+      ],
+      "stats": {
+        "projects": "18+",
+        "label1": "에듀테크 플랫폼",
+        "students": "500K+",
+        "label2": "등록된 학생"
+      }
+    },
+    "logistics": {
+      "title": "물류 및 공급망",
+      "description": "공급망 운영을 최적화하는 스마트 물류 솔루션",
+      "features": [
+        "차량 관리 시스템",
+        "실시간 추적",
+        "경로 최적화",
+        "창고 관리",
+        "공급망 가시성",
+        "예측 분석"
+      ],
+      "stats": {
+        "projects": "12+",
+        "label1": "물류 시스템",
+        "efficiency": "40%",
+        "label2": "비용 절감"
+      }
+    },
+    "cta": {
+      "title": "산업을 변혁할",
+      "titleHighlight": "준비가 되셨나요?",
+      "subtitle": "우리의 전문 지식이 귀하의 디지털 전환 여정을 가속화하는 방법을 논의하겠습니다.",
+      "ctaPrimary": "상담 예약",
+      "ctaSecondary": "사례 연구 보기"
+    }
+  },
+  "careers": {
+    "hero": {
+      "badge": "채용",
+      "title": "혁신 리더와 함께",
+      "titleHighlight": "커리어를 쌓으세요",
+      "subtitle": "글로벌 고객을 위한 최첨단 프로젝트를 진행하는 열정적인 기술 팀에 합류하세요"
+    },
+    "benefits": {
+      "title": "왜 EXO인가?",
+      "subtitle": "세계 수준의 복리후생 및 문화",
+      "competitive": {
+        "title": "경쟁력 있는 보상",
+        "description": "시장을 선도하는 급여, 성과 보너스 및 스톡옵션"
+      },
+      "flexible": {
+        "title": "유연한 근무",
+        "description": "유연한 시간과 워라밸을 갖춘 원격 우선 문화"
+      },
+      "growth": {
+        "title": "경력 성장",
+        "description": "명확한 경력 경로, 멘토십 프로그램 및 기술 개발"
+      },
+      "learning": {
+        "title": "학습 예산",
+        "description": "과정, 컨퍼런스 및 인증을 위한 연간 $2,000"
+      },
+      "health": {
+        "title": "건강 및 웰빙",
+        "description": "프리미엄 건강 보험, 정신 건강 지원, 헬스장 멤버십"
+      },
+      "international": {
+        "title": "글로벌 경험",
+        "description": "국제 고객 및 다문화 팀과 협업"
+      }
+    },
+    "positions": {
+      "title": "채용 공고",
+      "subtitle": "다음 기회를 찾아보세요",
+      "senior_fullstack": {
+        "title": "시니어 풀스택 엔지니어",
+        "department": "엔지니어링",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "React, Node.js 및 AWS를 사용하여 확장 가능한 웹 애플리케이션 구축",
+        "requirements": [
+          "5년 이상의 풀스택 개발",
+          "React, TypeScript, Node.js 전문가",
+          "AWS/GCP 경험",
+          "강력한 시스템 설계 기술"
+        ]
+      },
+      "mobile_engineer": {
+        "title": "모바일 엔지니어 (iOS/Android)",
+        "department": "엔지니어링",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "수백만 사용자를 위한 아름다운 모바일 경험 제작",
+        "requirements": [
+          "3년 이상의 모바일 개발",
+          "Swift/Kotlin 전문 지식",
+          "React Native 경험",
+          "App Store/Play Store에 앱 출시"
+        ]
+      },
+      "devops": {
+        "title": "DevOps 엔지니어",
+        "department": "인프라",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "CI/CD 파이프라인 및 클라우드 인프라 구축 및 유지 관리",
+        "requirements": [
+          "3년 이상의 DevOps 경험",
+          "Kubernetes 및 Docker 전문가",
+          "AWS/GCP 인증",
+          "Terraform/CloudFormation 기술"
+        ]
+      },
+      "ai_engineer": {
+        "title": "AI/ML 엔지니어",
+        "department": "엔지니어링",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "AI 솔루션 개발 및 제품에 LLM 통합",
+        "requirements": [
+          "2년 이상의 ML/AI 경험",
+          "Python, TensorFlow, PyTorch",
+          "LLM 통합 경험",
+          "강력한 수학 및 알고리즘"
+        ]
+      },
+      "product_designer": {
+        "title": "시니어 제품 디자이너",
+        "department": "디자인",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "웹 및 모바일 제품을 위한 직관적인 사용자 경험 디자인",
+        "requirements": [
+          "4년 이상의 제품 디자인",
+          "Figma 및 디자인 시스템 전문가",
+          "사용자 연구 및 테스트",
+          "출시된 제품 포트폴리오"
+        ]
+      },
+      "project_manager": {
+        "title": "기술 프로젝트 매니저",
+        "department": "관리",
+        "location": "원격 / 호치민시",
+        "type": "정규직",
+        "description": "엔터프라이즈 소프트웨어를 제공하는 교차 기능 팀 리드",
+        "requirements": [
+          "3년 이상의 프로젝트 관리",
+          "Agile/Scrum 인증",
+          "기술 배경",
+          "고객 대면 경험"
+        ]
+      }
+    },
+    "process": {
+      "title": "채용 프로세스",
+      "subtitle": "투명한 채용 여정",
+      "step1": {
+        "title": "지원서 검토",
+        "description": "영업일 기준 3일 이내에 지원서를 검토합니다"
+      },
+      "step2": {
+        "title": "전화 스크리닝",
+        "description": "배경과 관심사를 논의하는 30분 통화"
+      },
+      "step3": {
+        "title": "기술 평가",
+        "description": "실용적인 코딩 챌린지 또는 디자인 연습"
+      },
+      "step4": {
+        "title": "팀 인터뷰",
+        "description": "팀을 만나고 기술 및 문화적 적합성 논의"
+      },
+      "step5": {
+        "title": "제안",
+        "description": "최종 인터뷰 후 48시간 이내에 제안 받기"
+      }
+    },
+    "cta": {
+      "title": "적합한 역할이 보이지 않나요?",
+      "titleHighlight": "어쨌든 이야기합시다",
+      "subtitle": "우리는 항상 재능 있는 사람들을 만나는 데 관심이 있습니다. 이력서를 보내주시면 적합한 포지션이 열릴 때 연락드리겠습니다.",
+      "ctaPrimary": "이력서 제출",
+      "ctaSecondary": "문화 알아보기"
+    }
+  },
   "footer": {
     "description": "신뢰할 수 있는 기술 파트너로서 기업의 혁신 가속화와 성공적인 디지털 전환을 지원합니다.",
     "services": "서비스",
